# specifications

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  AGENTS.md  BSON.html  CODEOWNERS  LICENSE.md  Makefile  README.md  README.rst  book.toml  driver-bulk-update.html  driver-mantras.html  extended-json.rst  flake.nix  index.html  makefile  makefile-driver  makefile-server  markdown_link_config.json  mkdocs.yml  package.json  print.html  pyproject.toml  requirements.txt  sc  server_write_commands.rst  ö
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benchmarking/: benchmarking.html  benchmarking.rst
bson-binary-encrypted/: binary-encrypted.html
bson-binary-uuid/: uuid.html
bson-corpus/: bson-corpus.html
bson-decimal128/: decimal128.html  decimal128.rst
bson-objectid/: objectid.html
causal-consistency/: causal-consistency.html
change-streams/: change-streams.html
client-side-encryption/: client-side-encryption.html
client-side-operations-timeout/: client-side-operations-timeout.html
collation/: collation.html
command-logging-and-monitoring/: command-logging-and-monitoring.html
compression/: OP_COMPRESSED.html
connection-monitoring-and-pooling/: connection-monitoring-and-pooling.html  connection-monitoring-and-pooling.rst
connection-string/: connection-string-spec.html
crud/: bulk-write.html  crud.html
dbref/: dbref.html
docs/: README.md  Requirements for Client Applications implementing Workforce (Human) OIDC Auth For MongoDB.md  workforce-human-oidc-auth.md
(+3762 files in other folders)
